# MIRAD

./: .dockerignore  Dockerfile  LICENSE  README.md  experiments.ipynb  pyproject.toml
lib/: data.py  embedding_sum.py
notebooks/: experiments.ipynb  tutorial.ipynb
